force-app/main/default/objects/custom_create110__c/custom_create110__c.object-meta.xml
<CustomObject>
    <label>Custom created object110</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects110</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>