force-app/main/default/objects/custom_create110__c/fields/custom_create_110field618__c.field-meta.xml
<CustomField>
    <fullName>custom_create_110field618__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 110field618</label>
    <type>Checkbox</type>
</CustomField>